# router_bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build_release.yml
docker/: Dockerfile  build_images.sh
src/: main.rs
