[package]
name = "router_bot"
version = "0.1.0"
description = "A simple Telegram bot for a router that sends WoL packets to specified computers on the local network."
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cykooz/router_bot"
edition = "2024"


[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
wol = "0.5.0"
dotenvy = "0.15.7"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
pretty_env_logger = "0.5.0"
log = "0.4.29"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
