[package]
name = "router_bot"
version = "0.1.0"
description = "A simple Telegram bot for a router that sends WoL packets to specified computers on the local network."
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cykooz/router_bot"
edition = "2024"


[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
wol = "0.5.0"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "ansi"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
